--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,7 @@
 # NOTE: This may also need to be set in Netlify Dashboard > 
 #       Site settings > Build & deploy > Environment variables
 [build.environment]
-  NETLIFY_SKIP_SECRETS_SCAN = "true"
-  NETLIFY_SKIP_SECRETS_DETECTION = "true"
+  SECRETS_SCAN_ENABLED = "false"
 
 [[headers]]
   for = "/*"
