--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,9 @@
   [headers.values]
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
+
+# Clean URL for admin page
+[[redirects]]
+  from = "/admin"
+  to = "/admin.html"
+  status = 200
